# msc-cirkit

./: .gitignore  README.md  TODO.md  cache_mnist.py  cirkits.ipynb  flake.nix  helpers.py  integrate_query.ipynb  kron_vs_nystrom_prelim.ipynb  main.py  new_squared_sum.ipynb  normalrings.ipynb  nystromlayer.py  pyproject.toml  symbolic_nystrom.py  train_cirkit_wandb.py
Legacy/: benchmark_kron.py  kron_logger.py  kron_vs_nystrom_prelim.ipynb  krontests.ipynb  new_squared_sum.ipynb  squared_sum.ipynb  sweep_crossing_rings.yaml  sweep_krontest.yaml  train_cirkit_wandb.py  tuckertest.ipynb
cirkit/: pipeline.py  pyproject.toml
cirkit/backend/torch/: compiler.py
cirkit/backend/torch/layers/: input.py
cirkit/backend/torch/optimization/: layers.py
cirkit/libcirkit.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: nystrom_optimization.md
experiments/: mnist_spectrum.py  mnist_spectrum_table.py  quick_test.py  rq4.py  train_mnist_cache.py  wand_benchmark.py  wand_deep_benchmark.py
legacy/: circuit_manip.py
slurm/: fsdp_benchmark.slurm
src/: benchmarks.py  circuit_manip.py  circuit_types.py  config.py  nystromlayer.py  profilers.py  sampler.py  visualisation.py
src/cirkit/: __init__.py  pipeline.py
src/cirkit/backend/: __init__.py
src/cirkit/backend/torch/: __init__.py  compiler.py
src/cirkit/backend/torch/optimization/: __init__.py  layers.py
tests/: test_benchmark_mnist_input.py  test_circuit_types.py  test_distributed_wrappers.py  test_nystrom_circuit_compile.py  test_nystrom_equivalence.py  test_nystrom_optimization.py  test_weight_copy.py
